2003-06-12  Richard Williamson   <rjw@apple.com>

	Fixed 3221078.  Maintain a seperate width map
	for substitute fonts to avoid collision of glyph
	codes.

        Reviewed by Chris & Gramps.

        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:

=== Safari-84 ===

2003-06-12  Darin Adler  <darin@apple.com>

        Fixed by Richard, reviewed by me.

	- fixed 3289047 -- REGRESSION: can't go back after using form at attwireless.com

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge reportClientRedirectToURL:delay:fireDate:lockHistory:isJavaScriptFormAction:]):
        Added isJavaScriptFormAction parameter, passed on to frame.

        * WebView.subproj/WebFramePrivate.h: Added isJavaScriptFormAction parameter.
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _clientRedirectedTo:delay:fireDate:lockHistory:isJavaScriptFormAction:]):
        If isJavaScriptFormAction is YES, then don't treat this is a "quick redirect" which is
        merged with the previous page for purposes of back/forward.

2003-06-11  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3289577>: Reenable Carbon Java plug-ins when in Carbon app

        Reviewed by gramps.

        * Plugins.subproj/WebPluginDatabase.m:
        (-[WebPluginDatabase pluginForKey:withEnumeratorSelector:]): only call canUsePlugin: for web plug-ins

2003-06-11  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3289380>: REGRESSION: policyDataSource == nil assertion failure after closing particular window


        Reviewed by john.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _continueAfterNavigationPolicy:]): don't clear policyDataSource here because this method may not be called during navigation
        (-[WebFrame _continueLoadRequestAfterNavigationPolicy:formState:]): clear policyDataSource here 

2003-06-11  Chris Blumenberg  <cblu@apple.com>
